# opengm_rts

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  makefile
src/: lib.rs  test_data.rs  tester.rs
src/testsuits/: approximate_entropy.rs  autocorrelation.rs  binary_derivative.rs  block_frequency.rs  cumulative_sums.0.rs  cumulative_sums.rs  discrete_fourier.rs  frequency.rs  linear_complexity.rs  linear_complexity_simd.rs  longest_run.rs  mod.rs  poker.rs  rank.rs  rank_u64.rs  runs.rs  runs_distribution.rs  serial.rs  universal.rs
src/testsuits/util/: math.rs  mod.rs  u1000.rs  u500.rs  u5000.rs
