[package]
name = "opengm_rts"
version = "0.1.0"
edition = "2021"
authors = ["The OpenGM Group <opengm at yeah.net>"]
description = "GM/T 0005-2021 randomness test suits written in Rust."
documentation = "https://"
keywords = [
    "randomness",
    "gm/t 0005",
]
license = "MIT"
repository = "https://github.com/opengm-libs/opengm_rts"

[dependencies]
libm = "0.2"
rustfft = "6.2.0"