[package]
name = "opengm_rts"
version = "0.2.1"
edition = "2021"
authors = ["The OpenGM Group <opengm at yeah.net>"]
description = "GM/T 0005-2021 randomness test suits written in Rust."
keywords = [
    "randomness",
    "opengm"
]
license = "MIT"
repository = "https://github.com/opengm-libs/opengm_rts"

[dependencies]
libm = "0.2"
rustfft = "6.2"
rayon = {version = "1.10", optional = true}
rand = {version = "0.8", optional = true}

[features]
default = ["build-binary"]
build-binary = ["rayon", "rand"]


[[bin]]
name = "opengm_rts"
path = "bin/main.rs"
required-features = ["build-binary"]