[package]
name = "opengm_rts"
version = "0.2.4"
edition = "2021"
authors = ["The OpenGM Group <opengm at yeah.net>"]
description = "GM/T 0005-2021 randomness test suits written in Rust."
keywords = [
    "randomness",
    "opengm"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/opengm-libs/opengm_rts"

[dependencies]
libm = "0.2"
rustfft = "6.3"
realfft = "3.4"
rayon = {version = "1.10", optional = true}

[dev-dependencies]
rand = {version = "0.8"}


[features]
default = ["build-binary"]
build-binary = ["rayon"]

[profile.release]
panic = "abort"

[[bin]]
name = "opengm_rts"
path = "bin/main.rs"
required-features = ["build-binary"]